--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
     "@types/node": "^24.0.7",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "typescript-eslint": "^8.35.0",
+    "@eslint/js": "^9.30.0"
   }
 }
